# rust-web-template

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: config.toml  config.toml.example
api-doc/: openapi.json
gen-api-docs/: Cargo.toml
gen-api-docs/src/: main.rs
lib/api/: Cargo.toml
lib/api/src/: error.rs  fallback.rs  layers.rs  lib.rs  swagger.rs
lib/config/: Cargo.toml
lib/config/src/: constants.rs  env_var.rs  error.rs  lib.rs  stage.rs
lib/controller/: Cargo.toml
lib/controller/src/: error.rs  health.rs  lib.rs  ready.rs  todo.rs
lib/controllers/: Cargo.toml
lib/controllers/src/: hello.rs  lib.rs
lib/model/: Cargo.toml
lib/model/src/: entity.rs  error.rs  lib.rs
lib/model/src/todo/: for_create.rs  for_update.rs  mod.rs  service.rs
lib/store/: Cargo.toml
lib/store/src/: error.rs  lib.rs  test.rs
lib/trace/: Cargo.toml
lib/trace/src/: axum.rs  error.rs  lib.rs  local.rs
migrations/: 20240414063433_init.sql
migrations/dev_only/: init.sql
src/: error.rs  gen_openapi.rs  main.rs  routes.rs
src/api/: error.rs  fallback.rs  mod.rs  open_api.rs
src/api/controller/: hello_world.rs  mod.rs
src/api/layer/: mod.rs  trace.rs
src/config/: constants.rs  env_var.rs  error.rs  log_level.rs  mod.rs  stage.rs
src/controller/: mod.rs
src/trace/: error.rs  mod.rs
src/util/: mod.rs
src/util/command/: error.rs  mod.rs
src/util/git/: error.rs  mod.rs
