[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Link time optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["trace"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "fmt"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.22.0", features = ["trace", "metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics", "tls-roots"] }
tonic = "0.11.0"