[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"
default-run = "app"

# Main Binary
[[bin]]
name = "app"
path = "./src/main.rs"

[[bin]]
name = "gen-api-docs"
path = "./gen-api-docs/src/main.rs"

[workspace]
members = [
    "gen-api-docs",
    "lib/*",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Link time optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[dependencies]
# Internal
lib-api = { path = "lib/api" }
lib-config = { path = "lib/config" }
lib-controllers = { path = "lib/controllers" }
lib-trace = { path = "lib/trace" }

# External
anyhow = { workspace = true }
axum =  { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipauto = { workspace = true }


[workspace.dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
dotenv = "0.15.0"
opentelemetry = "0.22.0"
opentelemetry-otlp = "0.15.0"
opentelemetry_sdk = "0.22.1"
opentelemetry-semantic-conventions = "0.14.0"
serde = "1.0.196"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
tower-http = "0.5.2"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = "6.0.0"
utoipauto = "0.1.10"
uuid = "1.8.0"