[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"
default-run = "app"

# Main Binary
[[bin]]
name = "app"
path = "./src/main.rs"

# API Documentation Generator
[[bin]]
name = "gen-api-docs"
path = "./gen-api-docs/src/main.rs"

[workspace]
members = [
    "gen-api-docs",
    "lib/*",
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Link time optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary

[dependencies]
# Internal
lib-api = { path = "lib/api" }
lib-config = { path = "lib/config" }
lib-controller = { path = "lib/controller" }
lib-trace = { path = "lib/trace" }
lib-model = { path = "lib/model" }

# External
anyhow = { workspace = true }
axum =  { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
thiserror = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipauto = { workspace = true }


[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry_sdk = "0.24.1"
opentelemetry-semantic-conventions = "0.16.0"
serde = "1.0.209"
serde_json = "1.0.127"
serde_valid = "0.24.0"
serial_test = "3.1.1"
sqlx = "0.7.4"
test-case = "3.3.1"
tokio = { version = "1.39.3", features = [] }
tonic = "0.12.2"
tower-http = "0.5.2"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = "7.1.0"
utoipauto = "0.1.14"
uuid = "1.10.0"
