[package]
name = "lib-controllers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true } 
axum = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }