[package]
name = "lib-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
lib-config = { path = "../config" }

# External
anyhow = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true, features = ["trace", "metrics"] }
opentelemetry-otlp = { workspace = true, features = ["metrics", "tls-roots"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, default-features = false, features = ["trace", "rt-tokio"] }
thiserror = { workspace = true }
tonic = "0.11.0"
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "fmt"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }